--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "php": "^8.1",
     "2captcha/2captcha": "^1.2",
     "saloonphp/saloon": "^3.0",
-    "illuminate/support": "^9.0|^10.0|^11.0|^12.0"
+    "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
+    "weijiajia/saloonphp-logs-plugin": "dev-main"
   },
   "require-dev": {
     "pestphp/pest": "^2.0 || ^3.0",
